some styles added

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   </main>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/bmt-dev/">bmt-dev</a>.
+    Challenge by&nbsp;<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by&nbsp;<a href="https://github.com/bmt-dev/">bmt-dev</a>.
   </div>
 </body>
 
